V1.0.3 - Exposed some additional fields on the API
