# src/api/fao/merstracker-primary-estimates/index.ts
@@ -76,6 +76,9 @@ export const generateMersPrimaryEstimatesRequestHandler = (
         whoRegion: mersPrimaryEstimate.primaryEstimateInfo.whoRegion,
         unRegion: mersPrimaryEstimate.primaryEstimateInfo.unRegion,
         firstAuthorFullName: mersPrimaryEstimate.primaryEstimateInfo.firstAuthorFullName,
+        antigen: mersPrimaryEstimate.primaryEstimateInfo.antigen,
+        exposureToCamels: mersPrimaryEstimate.primaryEstimateInfo.exposureToCamels,
+        samplingMethod: mersPrimaryEstimate.primaryEstimateInfo.samplingMethod,
         sourcePublicationYear: mersPrimaryEstimate.primaryEstimateInfo.sourcePublicationYear,
         sourceUrl: mersPrimaryEstimate.primaryEstimateInfo.sourceUrl,
         sourceType: mersPrimaryEstimate.primaryEstimateInfo.sourceType,
